Sat Mar 10 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Released version 0.0.7

Mon Feb 19 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Hopefully fixing the flaw of MiniWebsvr allowing "special device
	  files" to be accessed. Still need to test properly.

Fri Feb 16 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Applied a patch from Helc`Ainu to provide Linux port with thread
	  pool support.
	- Minor alterations to patch to fix race condition, and exit on flag
	- Re-patched the patched patch (phew!) Helc provided me with some good
	  advice on the mistakes I have made.
	- After that, and resolving a possibly unnessesary sleep got a ~15%
	  speedup!

Tue Feb 13 2007 Daniel Walker <djwalker at users.sourceforge.net>
	- Fixed some errors with parsing % in URLs

Tue Feb 13 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Implemented more comprehensive sub-root protection

Fri Feb 9 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Pthread implementation is working fine now
	- Released version 0.0.6

Thu Feb 8 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Range requests(download resuming) is fully functional
	- Started implementing pthreads support

Wed Feb 7 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- HTTP/1.0 style "Range" requests are implmented and tested
	- Added a ton of debug info

Sat Feb 3 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- MiniWebSvr now handles range errors properly
	- #ifdef _DEBUG then prints out headers as debug info...

Fri Feb 2 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Added initial support for Thread Pools
	- Added initial support for Range-Based downloads
	- Changed polling back to 1 second

Wed Jan 24 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Got single threaded server to work on Linux
	- Implemented Address reuse (for Linux to ignore TIME_WAIT state)(to